# geo-carbon

./: README.md
api/: alembic.ini  main.py  pyproject.toml  requirements.txt
api/alembic/versions/: a0d1debf7259_create_footprints_table.py  b81f68b5a82c_add_users_table.py
api/dal/: database.py  footprintRepo.py  repoBase.py  userRepo.py
api/models/: footprint.py  user.py
api/presentation/creation/: footprint.py  login.py  signup.py
api/presentation/readonly/: idPresentation.py  userTokenPresentation.py
api/routers/: footprint.py  home.py  login.py  signup.py
api/services/: authentication.py  footprintService.py  loginService.py  parameterError.py  serviceFactories.py  signupService.py
