[tool.poetry]
name = "api"
version = "0.1.0"
description = "The gelocalized carbon footprint calculator!"
authors = ["Jessy Anglehart-Nunes <ges13596@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.52.0"
bcrypt = "^3.1.7"
sqlalchemy = "^1.3.14"
alembic = "^1.4.1"
pyjwt = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
